[project]
name = "asgi-prometheus"
version = "1.2.2"
description = "Support Prometheus metrics for ASGI applications"
readme = "README.rst"
requires-python = ">=3.9"
license = { "text" = "MIT License" }
authors = [{ name = "Kirill Klenov", email = "horneds@gmail.com" }]
keywords = ["asyncio", "trio", "curio", "asgi", "prometheus"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Framework :: AsyncIO",
  "Framework :: Trio",
]
dependencies = ["asgi-tools >= 0.71.0", "prometheus_client >= 0.10.1"]

[project.urls]
homepage = "https://github.com/klen/asgi-prometheus"
repository = "https://github.com/klen/asgi-prometheus"

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-aio[curio,trio] >= 1.1.0",
  "pytest-mypy; implementation_name == 'cpython'",
  "ruff",
]
dev = ["bump2version", "refurb; python_version >= '3.9'", "tox", "pre-commit"]

[tool.setuptools]
packages = ['asgi_prometheus']

[tool.setuptools.package-data]
asgi_prometheus = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-xsv --mypy"

[tool.mypy]
packages = ["asgi_prometheus"]
ignore_missing_imports = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39,py310,py311,py312,pypy39

[testenv]
deps = -e .[tests]
commands =
        mypy
	pytest tests

[testenv:pypy39]
deps = -e .[tests]
commands =
	pytest tests
"""

[tool.ruff]
fix = true
line-length = 100
target-version = "py39"
exclude = [".venv", "docs", "examples"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "UP", "ANN", "DJ", "EM", "RSE", "SLF", "S101", "PLR2004"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
