[wheel]
python-tag = py3

[metadata]
name = asgi-prometheus
version = attr: asgi_prometheus.__version__
url = https://github.com/klen/asgi-prometheus
description = Support Prometheus metrics for ASGI applications
long_description = file: README.rst
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = asyncio, trio, curio, asgi, prometheus
project_urls = 
	Documentation = https://github.com/klen/asgi-prometheus
	Source code = https://github.com/klen/asgi-prometheus
	Issue tracker = https://github.com/klen/asgi-prometheus/issues
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Framework :: AsyncIO
	Framework :: Trio

[options]
packages = asgi_prometheus
include_package_data = True
python_requires = >= 3.7
install_requires = 
	asgi-tools          >= 0.47.9
        prometheus_client   >= 0.10.1

[options.package_data]
asgi_prometheus = py.typed

[options.extras_require]
tests = 
	pytest
	pytest-aio[trio,curio]
	pytest-mypy

[tool:pytest]
addopts = -xsv --mypy

[pylama]
ignore = D

[tox:tox]
envlist = py37,py38,py39

[testenv]
deps = -e .[tests]
commands = 
	pytest tests.py

[mypy]
ignore_missing_imports = true
